--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,10 +1,36 @@
 pipeline {
     agent any
+   
     stages {
-        stage('Hello') {
+        stage('Build') {
             steps {
-                echo 'Hello World'
+                echo 'Building...'
+                // Add your build commands here
             }
+        }
+        stage('Test') {
+            steps {
+                echo 'Testing...'
+                // Add your test commands here
+            }
+        }
+        stage('Deploy') {
+            steps {
+                echo 'Deploying...'
+                // Add your deployment commands here
+            }
+        }
+    }
+   
+    post {
+        success {
+            echo 'Pipeline succeeded! 🎉'
+        }
+        failure {
+            echo 'Pipeline failed! 😞'
+        }
+        always {
+            echo 'Pipeline completed!'
         }
     }
 }
